--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,58 +18,53 @@
             </div>
 
 
-          <!--<div class="row">-->
+          <div class="row">
 
-              <!--{% for n in news %}-->
+              {% for n in news %}
 
-                <!--<div class="col-sm-6">-->
+                <div class="col-sm-4">
 
-                    <!--<div class="card" style="width: 28rem;">-->
+                    <div class="card" style="width: 200px; height: 300px;">
 
-                        <!--<a href="news/news/{{ n._id }}">-->
-                                <!--{% if n.imgs %}-->
-                            <!--<img class="card-img-top img-responsive" src="{{ n.imgs[0] }}" alt="Card image cap">-->
-                                <!--{% else %}-->
-                            <!--<img class="card-img-top img-responsive" src="{{ url_for('static', filename = 'image/default_news_img.png') }}" alt="Card image cap">-->
-                                <!--{% endif %}-->
-                        <!--</a>-->
+                        <a href="news/news/{{ n._id }}">
+                                {% if n.imgs %}
+                            <img class="card-img-top img-responsive" src="{{ n.imgs[0] }}" alt="Card image cap">
+                                {% else %}
+                            <img class="card-img-top img-responsive" src="{{ url_for('static', filename = 'image/default_news_img.png') }}" alt="Card image cap">
+                                {% endif %}
+                        </a>
 
-                    <!--<div class="card-block">-->
-                        <!--<h4 class="card-title">{{ n.title }}</h4>-->
-                        <!--<p class="card-text">{{ n.n_date }}</p>-->
-                        <!--&lt;!&ndash;<a href="news/news/{{ n._id }}">View details &raquo;</a>&ndash;&gt;-->
-                    <!--</div>-->
-                    <!--</div>-->
+                        <div class="card-body">
+                            <h4 class="card-title">{{ n.title }}</h4>
+                            <p class="card-text">{{ n.n_date }}</p>
+                        </div>
 
+                    </div>
 
-                  <!--&lt;!&ndash;<p>{{ n.title }}</p>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<p>{{ n.n_date }}</p>&ndash;&gt;-->
-                  <!--&lt;!&ndash;<p><a class="btn btn-default" href="news/news/{{ n._id }}" role="button">View details &raquo;</a></p>&ndash;&gt;-->
+                </div><!--/.col-xs-6.col-lg-4-->
+              {% endfor %}
+          </div>
 
-                <!--</div>&lt;!&ndash;/.col-xs-6.col-lg-4&ndash;&gt;-->
-              <!--{% endfor %}-->
-          <!--</div>-->
+            <!--<div class="card-columns">-->
 
-            <div class="card-deck">
+                <!--{% for n in news %}-->
+              <!--<div class="card" style="width: 200px;">-->
 
-                {% for n in news %}
-              <div class="card" style="width: 200px;">
+                <!--<a href="news/news/{{ n._id }}">-->
+                        <!--{% if n.imgs %}-->
+                    <!--<img class="card-img-top img-responsive" src="{{ n.imgs[0] }}" alt="Card image cap">-->
+                        <!--{% else %}-->
+                    <!--<img class="card-img-top img-responsive" src="{{ url_for('static', filename = 'image/default_news_img.png') }}" alt="Card image cap">-->
+                        <!--{% endif %}-->
+                <!--</a>-->
 
-                <a href="news/news/{{ n._id }}">
-                        {% if n.imgs %}
-                    <img class="card-img-top img-responsive" src="{{ n.imgs[0] }}" alt="Card image cap">
-                        {% else %}
-                    <img class="card-img-top img-responsive" src="{{ url_for('static', filename = 'image/default_news_img.png') }}" alt="Card image cap">
-                        {% endif %}
-                </a>
+                <!--<div class="card-body">-->
+                    <!--<h4 class="card-title">{{ n.title }}</h4>-->
+                    <!--<p class="card-text">{{ n.n_date }}</p>-->
+                <!--</div>-->
 
-                <div class="card-body">
-                    <h4 class="card-title">{{ n.title }}</h4>
-                    <p class="card-text">{{ n.n_date }}</p>
-                </div>
-
-              </div>
-                {% endfor %}
-            </div>
+              <!--</div>-->
+                <!--{% endfor %}-->
+            <!--</div>-->
 
 {% endblock %}
