--- a/app/templates/news/select_topic.html
+++ b/app/templates/news/select_topic.html
@@ -10,13 +10,23 @@
 {#              <a href="" class="btn btn-default">选好了,立刻运行爬虫</a>#}
           </div>
 
-          <ul class="list-group">
-              {% for topic in topics %}
-              <li class="list-group-item">
-                  <p>{{ topic.content }} <span class="badge">{{ topic.subscribersCount }}</span></p>
-                  <a href="{{ url_for('news.modify_topic', topic_id=topic.topicId) }}" class="btn btn-primary">Edit</a>
-              </li>
-              {% endfor %}
-          </ul>
+            <div class="row">
+
+                <div class="col-sm-4">
+                    <ul class="list-group">
+                      {% for topic in topics %}
+
+                          <li class="list-group-item">
+                              <p>{{ topic.content }} <span class="badge">{{ topic.subscribersCount }}</span></p>
+                              <a href="{{ url_for('news.modify_topic', topic_id=topic.topicId) }}" class="btn btn-primary">Edit</a>
+                          </li>
+
+                      {% endfor %}
+                    </ul>
+                </div>
+
+            </div>
+
+
         </div>
 {% endblock %}
