--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -7,6 +7,33 @@ body {
   overflow-x: hidden; /* Prevent scroll on narrow devices */
 }
 
+.news {
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    background-color: #00a8c6;
+}
+
+.news_card {
+    max-width: 70%;
+    max-height: 70%;
+    margin: 20px;
+}
+
+.card_img {
+    width: 100%;
+    height: 150px;
+}
+
+.news img {
+    max-width: 90%;
+    max-height: 90%;
+}
+
+.card_down {
+    width: 100%;
+    height: 100px;
+}
 
 .profile-thumbnail {
     position: absolute;
@@ -114,8 +141,8 @@ div.flask-pagedown-preview h3 {
 }
 
 .post-body img {
-    max-width: 100%;
-    height: auto;
+    max-width: 80%;
+    max-height: 80%;
 }
 
 .post-body h1 {
