fix admin delete

--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -35,7 +35,7 @@
                         <span class="label label-danger">删除</span>
                     </a>
                     {% elif current_user.is_administrator() %}
-                    <a href="{{ url_for('.edit', id=post.id) }}">
+                    <a href="{{ url_for('.delete', id=post.id) }}">
                         <span class="label label-danger">删除 [管理员]</span>
                     </a>
                     {% endif %}
