--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,30 +19,27 @@
 
 
           <div class="row">
-
               {% for n in news %}
-
                 <div class="col-sm-4 news">
-
                     <div class="card news_card">
-
                         <div class="card_img">
                             <a href="news/news/{{ n._id }}">
                                 {% if n.imgs %}
-                            <img class="card-img-top img-responsive" src="{{ n.imgs[0] }}" alt="Card image cap">
+                            <img class="card-img-top img-responsive"
+                                 src="{{ n.imgs[0] }}"
+                                 alt="Card image cap">
                                 {% else %}
-                            <img class="card-img-top img-responsive" src="{{ url_for('static', filename = 'image/default_news_img.png') }}" alt="Card image cap">
+                            <img class="card-img-top img-responsive"
+                                 src="{{ url_for('static', filename = 'image/default_news_img.png') }}"
+                                 alt="Card image cap">
                                 {% endif %}
                             </a>
                         </div>
-
                         <div class="card-body card_down">
                             <h4 class="card-title">{{ n.title }}</h4>
                             <p class="card-text">{{ n.n_date }}</p>
                         </div>
-
                     </div>
-
                 </div><!--/.col-xs-6.col-lg-4-->
               {% endfor %}
           </div>
